sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:10: error: identifier expected but integer literal found.
  System.out.println("Tab[0] : " + tab[0])
                                       ^AlgBubbleSort1:23: error: ']' expected but '}' found.
} 
^